# emotion_tracker

./: .dockerignore  .env  .env.example  .gitignore  ADMIN_API_POSTMAN_GUIDE.md  Dockerfile  README.md  TELEGRAM_BOT_GUIDE.md  alembic.ini  docker-compose.yml  fill_db.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260414_0001_initial_schema.py  eb30861552a9_add_tg_chat_id_to_user_model.py
app/: main.py
app/api/: __init__.py  dependencies.py  main.py  requirements.txt  test.py
app/api/v1/: admin.py  analytics.py  auth.py  emotions.py  notifications.py  users.py
app/bot/: __init__.py  handlers.py  telegram_bot.py
app/core/: __init__.py  celery_config.py  config.py  constants.py  database.py  exceptions.py  security.py
app/core/bot/: __init__.py  bot_service.py
app/core/clients/: __init__.py  telegram_client.py
app/db/: __init__.py  crud.py  db.py  models.py
app/db/sql/: emotion_records.sql  notification_log.sql  recommendations.sql  subscriptions.sql  (+4 more)
app/models/: __init__.py  emotion.py  enums.py  notification.py  subscription.py  user.py
app/repositories/: __init__.py  base_repo.py  coping_method_repo.py  emotion_repo.py  hobby_repo.py  notification_repo.py  recommendation_repo.py  subscription_repo.py  user_repo.py  user_settings_repo.py
app/schemas/: __init__.py  admin.py  analytics.py  auth.py  common.py  emotion.py  health.py  notification.py  recommendation.py  subscription.py  user.py
app/services/: __init__.py  admin_service.py  analytics_service.py  auth_service.py  emotion_service.py  notification_service.py  recommendation_service.py  user_service.py
app/tasks/: __init__.py  maintenance.py  notifications.py  test.py
app/templates/: Dockerfile  analytics.html  dashboard.html  index.html  settings.html
app/utils/: __init__.py  db_gui.py  recommendations_engine.py  test.py  time_utils.py  trends.py  validators.py
nginx/: nginx.conf
scripts/: create_admin.py
static/css/: styles.css
static/js/: analytics.js  api.js  auth.js  dashboard.js  index.js  login.js  register.js  settings.js  tailwind-config.js
(+3 files in other folders)
